# langkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEV.md  FLICKERING_TEST_CHECKLIST.md  LLMS.md  NOTICE.md  NOTICE.txt  README.md  TODO.md  go.mod  go.sum  main.go  wails.json  windows_flickering.avif  windows_flickering_taskbar_filmed.avif
.github/workflows/: build.yml
anki-addon/: README.md  __init__.py  ankiweb_description.md  binary_manager.py  config.json  config.md  dialog_handler.py  ipc_server.py  manifest.json  process_manager.py  test_flickering.bat  webview_tab.py
anki-addon/user_files/: README.txt
api/: Makefile
api/schemas/: api.ridl
cmd/: README.md  cards.go  dub.go  enhance.go  extract.go  extractCards.go  item.go  lang.go  mediainfo.go  root.go  subs2cards.go  subs2dubs.go  task.go  translit.go
cmd/cli/: main.go
docs/: Adding_New_Settings.md  Adding_Progress_Bars.md  Dual_UI_Runtime_Architecture.md  Expectation_Integrity_Guide.md  FEATURE_CARD_REACTIVITY_AND_NOTIFICATIONS.md  FEATURE_SELECTOR_REACTIVITY.md  Lite_Mode_and_Blur_Effects.md  Logging_Docker_Containers.md  Logging_and_LogViewer_Architecture.md  NotifySystem_specs.md  PRD_Expectation_Checker.md  PRD_Expectation_Checker_REWRITE_for_modal_and_side_drawer.md  PRD_Integrity_Decode_Depth.md  dual-ui-runtime-migration.md  progress_bar_importance_mapping.md
internal/api/: README.md  doc.go  server.go  (+2 more)
internal/gui/frontend/src/wasm/: Cargo.toml
internal/gui/frontend/src/wasm/pkg/: build-info.json
internal/gui/frontend/src/wasm/src/: lib.rs
internal/gui/frontend/src/wasm/tests/: lib_test.rs
(+386 files in other folders)
