[package]
name = "log-engine"
version = "0.1.0"
edition = "2021"
description = "WebAssembly optimization module for log processing in Langkit"
authors = ["tassa-yoniso-manasi-karoto <awp4imdrdpwh@posteo.de>"]

[lib]
name = "log_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0" # Added in Phase 2
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["console"] }

[profile.release]
# Optimize for size
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dev-dependencies]
wasm-bindgen-test = "0.3.34"